agregando nuevas pag html y estilos, y responsive design

--- a/home.html
+++ b/home.html
@@ -7,19 +7,19 @@
 </head>
 <body>
 <nav class="nav">
-	<h3>Logo</h3>
+	<img class="img-logo" src="img/logo.jpg" alt="">
 	<ul>
 		<li>
-		opcion1
+		<a href="teclados.html">Teclados</a>
 		</li>
 		<li>
-			opcion2
+		 <a href="cuerdas.html">Cuerdas</a>
 		</li>
 		<li>
-			opcion3
+		 <a href="percusion.html">Percusión</a>
 		</li>
 		<li>
-			opcion4
+		<a href="vientos.html">Viento</a>
 		</li>
 		</ul>
 </nav>
@@ -27,18 +27,17 @@
 	<article>
 		<div class="articulo">
 		<div class="ilustrativo">
-			<img class="img-ilustrativo" src="img/teclado.webp" alt="teclado" width="100%" height="100%">
+			<img class="img-ilustrativo" src="img/teclado.webp" alt="teclado" >
 		</div>
 		<div class="descripcion">
-		<h3>Teclado Casio 5200!
-		</h3>
+		<h3>Teclado Casio 5200!</h3>
 		</div>
 		</div>
 	</article>
 	<article>
 		<div class="articulo">
 			<div class="ilustrativo">
-				<img class="img-ilustrativo" src="img/guitarra.jpg" alt="teclado" width="100%" height="100%">
+				<img class="img-ilustrativo" src="img/guitarra.jpg" alt="teclado" >
 			</div>
 			<div class="descripcion">
 				<h3>Guitarra electrica </h3>
@@ -48,7 +47,7 @@
 	<article>
 		<div class="articulo">
 			<div class="ilustrativo">
-				<img class="img-ilustrativo" src="img/bajo-electrico.png" alt="bajo-electrico" width="100%" height="100%">
+				<img class="img-ilustrativo" src="img/bajo-electrico.png" alt="bajo-electrico" >
 			</div>
 			<div class="descripcion">
 				<h3>Bajo electrico</h3>
@@ -59,7 +58,7 @@
 	<article">
 		<div class="articulo">
 			<div class="ilustrativo">
-				<img src="img/bateria.webp" alt="bateria acustica" width="100%" height="100%">
+				<img class="img-ilustrativo" src="img/bateria.webp" alt="bateria acustica">
 			</div>
 			<div class="descripcion">
 				<h3>Bateria Acústica Parquer Shadow</h3>
@@ -69,23 +68,30 @@
 	<article>
 		<div class="articulo">
 			<div class="ilustrativo">
-				
+				<img class="img-ilustrativo" src="img/Banjo.jpg" alt="">
 			</div>
 			<div class="descripcion">
-				<h3>DESCRIPCION</h3>
+				<h3>Banjo</h3>
 			</div>
 		</div>
 	</article>
 	<article>
 		<div class="articulo">
 			<div class="ilustrativo">
-				
+				<img class="img-ilustrativo" src="img/Flauta-traversa.jpg" alt="">
 			</div>
 			<div class="descripcion">
-				<h3>DESCRIPCION</h3>
+				<h3>Flauta traversa Yamaha</h3>
 			</div>
 		</div>
 	</article>
+	</section>
+	<section class="contac">
+			<form action="/suscripcion" class="form-email">
+			<h3>Contactame</h3>
+			<input type="text" placeholder="Dejame tu email">
+			<button>Enviar</button>
+			</form>
 	</section>
 </body>
 </html>
