agregando logo, hover

--- a/home.html
+++ b/home.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home</title>
+	<title>Electronic System</title>
+	<link rel="icon" type="image/jpg" href="img/logo.jpg">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 	<link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="nav">
-	<img class="img-logo" src="img/logo.jpg" alt="">
-	<ul>
-		<li>
-		<a href="teclados.html">Teclados</a>
-		</li>
-		<li>
-		 <a href="cuerdas.html">Cuerdas</a>
-		</li>
-		<li>
-		 <a href="percusion.html">Percusión</a>
-		</li>
-		<li>
-		<a href="vientos.html">Viento</a>
-		</li>
-		</ul>
-</nav>
+	<header class="header">
+		<figure class="logo">
+			<img class="img-logo" src="img/logo.jpg" alt="">
+		</figure>
+		<nav class="nav">
+			<ul>
+				<li>
+				<a href="teclados.html">Teclados</a>
+				</li>
+				<li>
+				 <a href="cuerdas.html">Cuerdas</a>
+				</li>
+				<li>
+				 <a href="percusion.html">Percusión</a>
+				</li>
+				<li>
+				<a href="vientos.html">Viento</a>
+				</li>
+				</ul>
+		</nav>
+	</header>
 <section class="container">
 	<article>
 		<div class="articulo">
@@ -92,6 +97,12 @@
 			<input type="text" placeholder="Dejame tu email">
 			<button>Enviar</button>
 			</form>
+			<div class="social">
+				<a href="https://twitter.com" class="social-link icon-twitter"></a>
+				<a href="https://facebook.com/damian.manchali" class="social-link icon-facebook"></a>
+				<a href="https://github.com/alex-nowsky" class="social-link icon-github"></a>
+				<a href="https://instagram.com/dami_manchali" class="social-link icon-instagram"></a>
+			</div>
 	</section>
 </body>
 </html>
